# giga-file-uploader

./: .gitignore  .sprint-running  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.sprint-session/: agent-sessions.yaml  execution-summary-2026-02-11-002.md  execution-summary-2026-02-11.md  review-report-1-1-round-1.md  review-report-1-2-round-1.md  review-report-1-2-round-2.md  review-report-1-3-round-1.md  review-report-2-1-round-1.md  review-report-2-1-round-2.md  review-report-2-2-round-1.md  review-report-2-2-round-2.md  review-report-2-3-round-1.md  review-report-2-3-round-2.md  review-report-3-1-round-1.md  review-report-3-1-round-2.md  review-report-3-2-round-1.md  review-report-3-3-round-1.md  review-report-3-3-round-2.md  review-report-6-1-round-1.md  review-report-6-2-round-1.md  review-report-6-3-round-1.md  review-report-6-4-round-1.md  review-report-6-5-round-1.md  review-report-6-6-round-1.md
_bmad-output/: project-context.md  test-design-system.md
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs  v1.rs
src-tauri/src/commands/: files.rs  history.rs  mod.rs  network.rs  settings.rs  upload.rs
src-tauri/src/models/: file.rs  history.rs  mod.rs  settings.rs  upload.rs
src-tauri/src/services/: chunk_manager.rs  mod.rs  progress.rs  retry_engine.rs  upload_engine.rs
src-tauri/src/storage/: history.rs  mod.rs  settings.rs
(+235 files in other folders)
