[package]
name = "giga-file-uploader"
version = "0.1.0"
description = "A Tauri App for uploading files to gigafile.nu"
authors = ["Shaoyoko"]
edition = "2021"

[lib]
name = "giga_file_uploader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tauri-plugin-dialog = "2.6.0"

[dev-dependencies]
tempfile = "3"
